--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title></title>
-        <meta name="author", content="Angus Gray">
+        <title>Basic HTML Text Tags</title>
+        <meta name="author" content="Angus Gray">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
